--- a/reml-demo/Makefile
+++ b/reml-demo/Makefile
@@ -1,4 +1,4 @@
-FLAGS=-no_basislib --maximum_inline_size 0 -no_opt
+FLAGS=-no_basislib -no_opt
 ROOT=~/gits/mlkit
 REML ?= $(ROOT)/bin/reml $(FLAGS)
 KITTESTER = $(ROOT)/bin/kittester
@@ -8,19 +8,35 @@ REMLSOURCES=er*.sml param.sml rec.sml tup.sml call.sml call2.sml ty1.sml err_exp
   nomut-err.sml nomut-ok.sml nomut2-err.sml disputs.sml disputs2.sml par.sml par-no.sml par-no2.sml
 
 .PHONY: all
-all:
-	$(KITTESTER) "SML_LIB=$(ROOT) $(REML)" --logdirect all.tst
-
-all.sml: $(REMLSOURCES)
-	echo '(* Testfiles *)' > $@
-	for x in $(REMLSOURCES) ; do \
-          echo "\n(*** $$x: ***)" >> $@; \
-          cat $$x >> $@; \
-        done
+all: test tests.sml
+	$(MAKE) -C pmsort all
+	$(MAKE) -C slmsort all
+	$(MAKE) -C ray all
+	$(MAKE) -C mandelbrot all
 
 .PHONY: test
-test: all
+test:
+	$(KITTESTER) "SML_LIB=$(ROOT) $(REML)" --logdirect all.tst
+
+tests.sml: $(REMLSOURCES)
+	echo '(* Testfiles *)' > $@
+	for x in $(REMLSOURCES) ; do \
+          echo "\n(*** SOURCE $$x ***)" >> $@; \
+          cat -n $$x >> $@; \
+          if [ -a $$x.out.ok ]; then \
+             echo "\n(*** COMPILE SUCCESS - EXECUTION OUTPUT ***)" >> $@; \
+             cat $$x.out.ok | sed 's/^/     /' >> $@; \
+          fi; \
+          if [ -a $$x.log.ok ]; then \
+             echo "\n(*** COMPILE FAILURE - COMPILER OUTPUT ***)" >> $@; \
+             cat $$x.log.ok | sed 's/^/     /' | grep -v 'Stopping compilation' >> $@; \
+          fi; \
+        done
 
 .PHONY: clean
 clean:
-	rm -rf *~ *.log test_report.html MLB KITversion TESTmessages *.out runexe all.sml
+	rm -rf *~ *.log test_report.html MLB KITversion TESTmessages *.out runexe tests.sml all.sml
+	$(MAKE) -C pmsort clean
+	$(MAKE) -C slmsort clean
+	$(MAKE) -C ray clean
+	$(MAKE) -C mandelbrot clean
