--- a/reml-demo/pmsort/Makefile
+++ b/reml-demo/pmsort/Makefile
@@ -1,5 +1,5 @@
 FLAGS ?=
-REML ?= SML_LIB=~/gits/mlkit ~/gits/mlkit/bin/reml $(FLAGS)
+REML ?= reml $(FLAGS)
 
 .PHONY: all
 all: pmsort.res pmsort.exe
